--- a/public/static/custom.css
+++ b/public/static/custom.css
@@ -1,3 +1,20 @@
+#center_image{
+	height:320px;
+}
+.large {
+	font-weight: bold;
+	font-size: 70px;
+	color:black;
+	line-height:1em;
+}
+
+.medium {
+	font-weight:bold;
+	font-size: 25px;
+	line-height:2em;
+	color:black;
+}
+
 .center {
 	text-align:center;
 }
@@ -50,7 +67,7 @@
 body {
 	font-size:10pt;
 	color: #555;
-	font-family: Lucida Grande, Verdana, Lucida Sans Regular, Lucida Sans Unicode, Arial, sans-serif;
+	font-family: Helvetica,Arial,'Liberation Sans',FreeSans,sans-serif;
 }
 
 h3 h3 {
@@ -81,4 +98,8 @@ a {
 .example-image {
 	height:228px;
 	overflow:none;
+}
+
+strong {
+	color:black;
 }
