filling in front page

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -40,23 +40,23 @@
 				
 			</div>
 			
-			<div class="span-6">
+			<div class="span-8">
 				
-				<div class="span-6 center medium last">
+				<div class="span-8 center medium last">
 					Awesomeness
 				</div>
-				<div class="span-6 last">
+				<div class="span-8 last">
 					<p>To understand Vision on Tap, we must first understand computer vision. What is computer vision? Pure awesomeness. It lets computers use cameras to do crazy things like automatically stitch together panoramas, reconstruct 3D geometry from multiple photographs, and even tell you when the water's boiling.</p>
 				
 					<p>For decades, this technology has been advancing, mostly within the confines of academic and advanced research institutions. With Vision On Tap, we're going to bring it to the masses.</p>
 				</div>
 			</div>
 			
-			<div class="span-6">
-				<div class="span-6 center medium last">
+			<div class="span-8 last">
+				<div class="span-8 center medium last">
 					Privacy
 				</div>
-				<div class="span-6 last">
+				<div class="span-8 last">
 					<p><em>Ok, great, so I visit this website that hooks brains into my camera. Now a computer with brains is looking at me. This is weird.</em></p>
 					
 					<p><strong>Have no fear!</strong> We don't take pictures unless you want them. We can't see you. No one can.</p>
@@ -66,21 +66,21 @@
 			
 			</div>
 			
-			<div class="span-6">
-				<div class="span-6 medium center last">
-					Mailing List
+			<div class="span-8">
+				<div class="span-8 medium center last">
+					Alpha
 				</div>
-				<div class="span-6 last">
-					Button
+				<div class="span-8 last">
+					Soon, you'll be able to sign up for the alpha test here! Shape the future of Vision on Tap!
 				</div>
 			</div>
 			
-			<div class="span-6 last">
-				<div class="span-6 medium center last">
-					Mailing List
+			<div class="span-8 last">
+				<div class="span-8 medium center last">
+					Updates
 				</div>
-				<div class="span-6 last">
-					Button
+				<div class="span-8 last">
+					We'll hook up a Twitter feed here.
 				</div>
 			</div>
 			
