added person model

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -28,12 +28,12 @@
 			</div>
 			<hr>
 			
-			<div class="span-12 center" id="center_image">
-				<%= image_tag "ballcam.jpg"%>
+			<div class="span-12 right large ">
+				<large>Give your camera brains!</large>
 			</div>
 			
-			<div class="span-12 large last">
-				<large>Give your camera brains!</large>
+			<div class="span-12 last" id="center_image">
+				<%= image_tag "ballcam.jpg"%>
 			</div>
 			
 			<div class="clear">
@@ -42,7 +42,7 @@
 			
 			<div class="span-8">
 				
-				<div class="span-8 center medium last">
+				<div class="span-8 medium last">
 					Awesomeness
 				</div>
 				<div class="span-8 last">
@@ -53,7 +53,7 @@
 			</div>
 			
 			<div class="span-8 last">
-				<div class="span-8 center medium last">
+				<div class="span-8 medium last">
 					Privacy
 				</div>
 				<div class="span-8 last">
@@ -67,7 +67,7 @@
 			</div>
 			
 			<div class="span-8">
-				<div class="span-8 medium center last">
+				<div class="span-8 medium last">
 					Alpha
 				</div>
 				<div class="span-8 last">
@@ -76,7 +76,7 @@
 			</div>
 			
 			<div class="span-8 last">
-				<div class="span-8 medium center last">
+				<div class="span-8 medium last">
 					Updates
 				</div>
 				<div class="span-8 last">
