--- a/public/static/custom.css
+++ b/public/static/custom.css
@@ -14,7 +14,9 @@
 	line-height:2em;
 	color:black;
 }
-
+.right {
+	text-align:right;
+}
 .center {
 	text-align:center;
 }
@@ -92,7 +94,8 @@ h3 h3 {
 }
 
 a {
-	text-decoration:none;
+	text-decoration:underline;
+	color:black;
 }
 
 .example-image {
