--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -24,12 +24,12 @@
 				Vision on Tap
 			</div>
 			<div class="alt small">
-				Disclaimer: We're undergoing heavy construction. Things will change without warning.
+				Disclaimer: We're undergoing heavy construction.
 			</div>
 			<hr>
 			
 			<div class="span-12 right large ">
-				<large>Give your camera brains!</large>
+				<large>GIVE YOUR CAMERA BRAINS!</large>
 			</div>
 			
 			<div class="span-12 last" id="center_image">
@@ -42,21 +42,22 @@
 			
 			<div class="span-8">
 				
-				<div class="span-8 medium last">
+				<div class="medium last">
 					Awesomeness
 				</div>
-				<div class="span-8 last">
+				<div class="last">
 					<p>To understand Vision on Tap, we must first understand computer vision. What is computer vision? Pure awesomeness. It lets computers use cameras to do crazy things like automatically stitch together panoramas, reconstruct 3D geometry from multiple photographs, and even tell you when the water's boiling.</p>
 				
-					<p>For decades, this technology has been advancing, mostly within the confines of academic and advanced research institutions. With Vision On Tap, we're going to bring it to the masses.</p>
+					<p>For decades, this technology has been advancing mostly within the confines of academic institutions and research labs. With Vision On Tap, we're going to bring it to the masses.</p>
+					
 				</div>
 			</div>
 			
 			<div class="span-8 last">
-				<div class="span-8 medium last">
+				<div class="medium last">
 					Privacy
 				</div>
-				<div class="span-8 last">
+				<div class="last">
 					<p><em>Ok, great, so I visit this website that hooks brains into my camera. Now a computer with brains is looking at me. This is weird.</em></p>
 					
 					<p><strong>Have no fear!</strong> We don't take pictures unless you want them. We can't see you. No one can.</p>
@@ -67,32 +68,38 @@
 			</div>
 			
 			<div class="span-8">
-				<div class="span-8 medium last">
+				<div class="medium last">
 					Demo
 				</div>
-				<div class="span-8 last">
+				<div class="last">
 					Try <a href="/spot.html">Spot Watcher</a>. It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
 				</div>
 			</div>
 			
 			<div class="span-8">
-				<div class="span-8 medium last">
+				<div class="medium last">
 					Alpha
 				</div>
-				<div class="span-8 last">
+				<div class="last">
 					Soon, you'll be able to sign up for the alpha test here! Shape the future of Vision on Tap!
 				</div>
 			</div>
 			
 			<div class="span-8 last">
-				<div class="span-8 medium last">
+				<div class="medium last">
 					Updates
 				</div>
-				<div class="span-8 last">
+				<div class="last">
 					<%= twitter %>
 				</div>
 			</div>
 			
+			<div class="span-12">
+				<div class="medium">
+					Slideshow
+				</div>
+				<%= slideshow %>
+			</div>
 			<div class="append-bottom last">
             
 			</div>
