updated spot watcher, trying to implement email signups

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -26,18 +26,13 @@
 			<div class="alt small">
 				Disclaimer: We're undergoing heavy construction.
 			</div>
-			<hr>
 			
-			<div class="span-12 right large ">
-				<large>GIVE YOUR CAMERA BRAINS!</large>
+			<div class="span-12 left large ">
+				Give your camera BRAINS!
 			</div>
 			
-			<div class="span-12 last" id="center_image">
+			<div class="span-12 right last large">
 				<%= image_tag "ballcam.jpg"%>
-			</div>
-			
-			<div class="clear">
-				
 			</div>
 			
 			<div class="span-12">
@@ -63,8 +58,8 @@
 				<div class="medium last">
 					Alpha
 				</div>
-				Soon, you'll be able to sign up for the alpha test here! Shape the future of Vision on Tap!
-				
+				You'll be able to sign up for our alpha test soon.
+			
 				<div class="medium last">
 					Demo
 				</div>
@@ -103,5 +98,6 @@
 			</div>
 			<%= google_analytics %>
 			<%= getsatisfaction %>
+		</div>
 	</body>
 </html>
