fixed front page style

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -27,11 +27,11 @@
 				Disclaimer: We're undergoing heavy construction.
 			</div>
 			
-			<div class="span-12 left large ">
+			<div class="span-12 right large ">
 				Give your camera BRAINS!
 			</div>
 			
-			<div class="span-12 right last large">
+			<div class="span-12 left last large">
 				<%= image_tag "ballcam.jpg"%>
 			</div>
 			
@@ -78,14 +78,10 @@
 				<div class="medium last">
 					Updates
 				</div>
-				
-				<div class="last">
-					<%= twitter %>
-				</div>
+				<%= twitter %>
 			</div>
 			
 			<div class="append-bottom last">
-            
 			</div>
 			
 			<hr>
