--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -23,30 +23,26 @@
 			<div class="title large">
 				Vision on Tap
 			</div>
+			
 			<div class="alt small">
 				Disclaimer: We're undergoing heavy construction.
 			</div>
 			
-			<div class="span-12 right large ">
-				Give your camera BRAINS!
-			</div>
-			
-			<div class="span-12 left last large">
-				<%= image_tag "ballcam.jpg"%>
+			<div class="span-24 last" id="center_image">
+				<div class="span-12 right large ">
+					Give your camera BRAINS!
+				</div>
+				<div class="span-12 left last">
+					<%= image_tag "front/ballcam.jpg"%>
+				</div>
 			</div>
 			
 			<div class="span-12">
-				
-				<div class="medium last">
+				<div class="medium">
 					Awesomeness
 				</div>
-				<div class="last">
 					<p>To understand Vision on Tap, we must first understand computer vision. What is computer vision? Pure awesomeness. It lets computers use cameras to do crazy things like automatically stitch together panoramas, reconstruct 3D geometry from multiple photographs, and even tell you when the water's boiling.</p>
-				
 					<p>For decades, this technology has been advancing mostly within the confines of academic institutions and research labs. With Vision On Tap, we're going to bring it to the masses.</p>
-					
-				</div>
-				
 				
 				<div class="medium">
 					Slideshow
@@ -55,17 +51,16 @@
 			</div>
 			
 			<div class="span-6">
-				<div class="medium last">
+				<div class="medium">
 					Alpha
 				</div>
 				You'll be able to sign up for our alpha test soon.
 			
-				<div class="medium last">
+				<div class="medium">
 					Demo
 				</div>
-					Try <a href="/spot.html">Spot Watcher</a>. It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
-				
-				<div class="medium last">
+					Try <a href="/spot.html">Spot Watcher</a>. Check out some <a href="/example.html">examples</a>! It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
+				<div class="medium">
 					Privacy
 				</div>
 				<p><em>Ok, great, so I visit this website that hooks brains into my camera. Now a computer with brains is looking at me. This is weird.</em></p>
@@ -74,20 +69,16 @@
 			</div>
 			
 			<div class="span-6 last">
-				
-				<div class="medium last">
+				<div class="medium">
 					Updates
 				</div>
 				<%= twitter %>
 			</div>
 			
-			<div class="append-bottom last">
+			<div class="append-bottom">
 			</div>
-			
 			<hr>
-			
-			
-			<div class=" alt footer span-24 last right">
+			<div class=" alt footer span-24 right">
 				<a href="http://kevinchiu.org">Kevin Chiu</a><br>
 				<a href="http://raskar.info">Ramesh Raskar</a><br>
 				<a href="http://media.mit.edu">MIT Media Lab</a>
