--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -1,89 +1,50 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
-"http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-	<head>
-		<%= stylesheet_link_tag "/static/blueprint/screen.css" %>
-		<%= stylesheet_link_tag "/static/blueprint/print.css", :media => "print" %>
-		<!--[if IE]>
-			<%= stylesheet_link_tag "/static/blueprint/ie.css", :media => "screen, projection" %>
-		<![endif]-->
-		<%= stylesheet_link_tag "/static/custom.css"%>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>
-			Vision on Tap
-		</title>
-		<meta name="generator" content="TextMate http://macromates.com/">
-		<meta name="author" content="kevin"><!-- Date: 2009-04-05 -->
-		<!-- <meta http-equiv="REFRESH" content="0;url=http://distributedcameras2.appspot.com"> -->
-	</head>
-	<body>
-		<div class="container">
-			<div class="prepend-top"></div>
-			<div class="title large">
-				Vision on Tap
-			</div>
-			
-			<div class="alt small">
-				Disclaimer: We're undergoing heavy construction.
-			</div>
-			
-			<div class="span-24 last" id="center_image">
-				<div class="span-12 right large ">
-					Give your camera BRAINS!
-				</div>
-				<div class="span-12 left last">
-					<%= image_tag "front/ballcam.jpg"%>
-				</div>
-			</div>
-			
-			<div class="span-12">
-				<div class="medium">
-					Awesomeness
-				</div>
-					<p>To understand Vision on Tap, we must first understand computer vision. What is computer vision? Pure awesomeness. It lets computers use cameras to do crazy things like automatically stitch together panoramas, reconstruct 3D geometry from multiple photographs, and even tell you when the water's boiling.</p>
-					<p>For decades, this technology has been advancing mostly within the confines of academic institutions and research labs. With Vision On Tap, we're going to bring it to the masses.</p>
-				
-				<div class="medium">
-					Slideshow
-				</div>
-				<%= slideshow %>
-			</div>
-			
-			<div class="span-6">
-				<div class="medium">
-					Alpha
-				</div>
-				You'll be able to sign up for our alpha test soon.
-			
-				<div class="medium">
-					Demo
-				</div>
-					Try <a href="/spot.html">Spot Watcher</a>. Check out some <a href="/example.html">examples</a>! It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
-				<div class="medium">
-					Privacy
-				</div>
-				<p><em>Ok, great, so I visit this website that hooks brains into my camera. Now a computer with brains is looking at me. This is weird.</em></p>
-				<p><strong>Have no fear!</strong> We don't take pictures unless you want them. We can't see you. No one can.</p>
-				<p>On the flip side, if you actually want to share your pictures, you can!</p>
-			</div>
-			
-			<div class="span-6 last">
-				<div class="medium">
-					Updates
-				</div>
-				<%= twitter %>
-			</div>
-			
-			<div class="append-bottom">
-			</div>
-			<hr>
-			<div class=" alt footer span-24 right">
-				<a href="http://kevinchiu.org">Kevin Chiu</a><br>
-				<a href="http://raskar.info">Ramesh Raskar</a><br>
-				<a href="http://media.mit.edu">MIT Media Lab</a>
-			</div>
-			<%= google_analytics %>
-			<%= getsatisfaction %>
-		</div>
-	</body>
-</html>
+<%= stylesheet_link_tag "/static/front.css"%>
+<div class="span-24 last" id="center_image">
+	<div class="span-12 right large ">
+		Give your camera BRAINS!
+	</div>
+	<div class="span-12 left last">
+		<%= image_tag "front/ballcam.jpg"%>
+	</div>
+</div>
+
+<div class="span-11">
+	<div class="medium">
+		Awesomeness
+	</div>
+		<p>To understand Vision on Tap, we must first understand computer vision. What is computer vision? Pure awesomeness. It lets computers use cameras to do crazy things like automatically stitch together panoramas, reconstruct 3D geometry from multiple photographs, and even tell you when the water's boiling.</p>
+		<p>For decades, this technology has been advancing mostly within the confines of academic institutions and research labs. With Vision On Tap, we're going to bring it to the masses.</p>
+	
+	<div class="medium">
+		Slideshow
+	</div>
+	<%= slideshow %>
+</div>
+
+<div class="span-12 prepend-1 last">
+	<div class="medium">
+		Sign Up
+	</div>
+	<a href="/person/new">Sign up</a> to be an Alpha tester!
+	
+</div>
+
+<div class="span-6 prepend-1 ">
+	<div class="medium">
+		Demo
+	</div>
+		Try <a href="/spot.html">Spot Watcher</a>. Check out some <a href="/example.html">examples</a>! It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
+	<div class="medium">
+		Privacy
+	</div>
+	<p><em>Ok, great, so I visit this website that hooks brains into my camera. Now a computer with brains is looking at me. This is weird.</em></p>
+	<p><strong>Have no fear!</strong> We don't take pictures unless you want them. We can't see you. No one can.</p>
+	<p>On the flip side, if you actually want to share your pictures, you can!</p>
+</div>
+
+<div class="span-6 last">
+	<div class="medium">
+		Updates
+	</div>
+	<%= twitter %>
+</div>
