changed example wording

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -33,7 +33,8 @@
 	<div class="medium">
 		Demo
 	</div>
-		Try <a href="/spot.html">Spot Watcher</a>. Check out some <a href="/example.html">examples</a>! It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
+		Try <a href="/spot.html">Spot Watcher</a>. It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
+		Check out some <a href="/example.html">examples</a>! 
 	<div class="medium">
 		Privacy
 	</div>
