--- a/app/views/person/new.erb
+++ b/app/views/person/new.erb
@@ -1,20 +1,24 @@
 
 
-<div class="span-12 last">
-	<div class="medium">
-		Sign up for the Alpha Test!
-	</div>
-	We promise to keep your information private.
-</div>
 
 
-<div class="span-5 last">
+
+<div class="prepend-3 span-8">
 	
 <% form_for :person, @person, :url => { :action => "create" } do |f| %>
 	<div>Name:</div><div><%= f.text_field :name %></div>
 	<div>Email:</div><div><%= f.text_field :email_address %></div>
-	
 	<div><%= submit_tag 'Submit'%></div>
 <% end %>
 
+</div>
+
+<div class="prepend-1 span-12  prepend-top last">
+	<div class="name">
+		
+	</div>
+	<div class="medium">
+		Sign up for the Alpha Test!
+	</div>
+	We promise to keep your information private.
 </div>
