linked paper to front page

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -19,6 +19,11 @@
 		Slideshow
 	</div>
 	<%= slideshow %>
+	
+	<div class="medium">
+		Paper
+	</div>
+	<a href="Vision_on_Tap.pdf">Vision on Tap ICCV Workshop Paper</a>
 </div>
 
 <div class="span-12 prepend-1 last">
