fixed paper acronym

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -23,7 +23,7 @@
 	<div class="medium">
 		Paper
 	</div>
-	<a href="Vision_on_Tap.pdf">Vision on Tap ICCV Workshop Paper</a>
+	<a href="Vision_on_Tap.pdf">Vision on Tap CVPR Workshop Paper</a>
 </div>
 
 <div class="span-12 prepend-1 last">
