removed update section

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -12,7 +12,7 @@
 	<div class="medium">
 		Awesomeness
 	</div>
-		<p>To understand Vision on Tap, we must first understand computer vision. What is computer vision? Pure awesomeness. It lets computers use cameras to do crazy things like automatically stitch together panoramas, reconstruct 3D geometry from multiple photographs, and even tell you when the water's boiling.</p>
+		<p>To understand Vision on Tap, we must first understand computer vision. What is computer vision? It lets computers use cameras to do crazy things like automatically stitch together panoramas, reconstruct 3D geometry from multiple photographs, and even tell you when the water's boiling.</p>
 		<p>For decades, this technology has been advancing mostly within the confines of academic institutions and research labs. With Vision On Tap, we're going to bring it to the masses.</p>
 	
 	<div class="medium">
@@ -34,7 +34,7 @@
 	
 </div>
 
-<div class="span-6 prepend-1 ">
+<div class="span-12 prepend-1 last">
 	<div class="medium">
 		Demo
 	</div>
@@ -48,9 +48,9 @@
 	<p>On the flip side, if you actually want to share your pictures, you can!</p>
 </div>
 
-<div class="span-6 last">
+<!-- <div class="span-6 last">
 	<div class="medium">
 		Updates
 	</div>
 	<%= twitter %>
-</div>
+</div> -->
