moved paper section

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -14,7 +14,7 @@
 		Demo
 	</div>
 		Try <a href="/spot.html">Spot Watcher</a>. It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
-		Check out some <a href="/example.html">examples</a>!
+		Check out some <a href="/example.html">suggested uses</a>. 
 	
 	<div class="medium">
 		Sign Up
@@ -26,15 +26,15 @@
 	</div>
 	<%= slideshow %>
 	
-	<div class="medium">
-		Paper
-	</div>
-	<a href="Vision_on_Tap.pdf">Vision on Tap CVPR Workshop Paper</a>
-	
 	
 </div>
 
 <div class="span-12 prepend-1 last">
+
+	<div class="medium">
+		Paper
+	</div>
+	<a href="Vision_on_Tap.pdf">Vision on Tap CVPR Workshop Paper</a>
 	<div class="medium">
 		Awesomeness
 	</div>
@@ -44,7 +44,7 @@
 	<div class="medium">
 		Privacy
 	</div>
-	<p><em>Ok, great, so I visit this website that hooks brains into my camera. Now a computer with brains is looking at me. This is weird.</em></p>
+	<p><em>Ok, great, so I visit this website that hooks brains into my camera. Now a computer with brains is looking at me. This is creepy.</em></p>
 	<p><strong>Have no fear!</strong> We don't take pictures unless you want them. We can't see you. No one can.</p>
 	<p>On the flip side, if you actually want to share your pictures, you can!</p>
 
