tweaked slideshow embed + title for About

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -36,7 +36,7 @@
 	</div>
 	<a href="Vision_on_Tap.pdf">Vision on Tap CVPR Workshop Paper</a>
 	<div class="medium">
-		Awesomeness
+		About
 	</div>
 		<p>To understand Vision on Tap, we must first understand computer vision. What is computer vision? It lets computers use cameras to do crazy things like automatically stitch together panoramas, reconstruct 3D geometry from multiple photographs, and even tell you when the water's boiling.</p>
 		<p>For decades, this technology has been advancing mostly within the confines of academic institutions and research labs. With Vision On Tap, we're going to bring it to the masses.</p>
