--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -9,17 +9,11 @@
 </div>
 
 <div class="span-11">
-	
+
 	<div class="medium">
-		Demo
+		Video Example
 	</div>
-		Try <a href="/spot.html">Spot Watcher</a>. It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
-		Check out some <a href="/example.html">suggested uses</a>. 
-	
-	<div class="medium">
-		Sign Up
-	</div>
-	<a href="/person/new">Sign up</a> to be an Alpha tester!
+	<%= vimeo %>
 
 	<div class="medium">
 		Slideshow
@@ -31,6 +25,18 @@
 
 <div class="span-12 prepend-1 last">
 
+	<div class="medium">
+		Demo
+	</div>
+		Try <a href="/spot.html">Spot Watcher</a>. It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
+		Check out some <a href="/example.html">suggested uses</a>.
+	
+
+	<div class="medium">
+		Sign Up
+	</div>
+	<a href="/person/new">Sign up</a> to be an Alpha tester!
+	
 	<div class="medium">
 		Paper
 	</div>
