changed demo wording

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -28,7 +28,7 @@
 	<div class="medium">
 		Demo
 	</div>
-		Try <a href="/spot.html">Spot Watcher</a>. It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
+		Try <a href="/spot.html">Spot Watcher</a>, an example of the kind of application you'll be able to make with the Vision on Tap system. It watches a spot for movement, and then sends you an alert as an audio ping, SMS, email, or Twitter message.
 		Check out some <a href="/example.html">suggested uses</a>.
 	
 
