linked main pic

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -4,7 +4,7 @@
 		Give your camera BRAINS!
 	</div>
 	<div class="span-12 left last">
-		<%= image_tag "front/ballcam.jpg"%>
+		<a href="/spot.html"><%= image_tag "front/ballcam.jpg"%></a>
 	</div>
 </div>
 
