linked brains subtitle

--- a/app/views/front/index.erb
+++ b/app/views/front/index.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag "/static/front.css"%>
 <div class="span-24 last" id="center_image">
 	<div class="span-12 right large ">
-		Give your camera BRAINS!
+		<a href="/spot.html">Give your camera BRAINS!</a>
 	</div>
 	<div class="span-12 left last">
 		<a href="/spot.html"><%= image_tag "front/ballcam.jpg"%></a>
